[package]
name = "multi-process-portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
bon = "3.3.0"
crossbeam = "0.8.4"
flume = "0.11.1"
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.18"
time = { version = "0.3.37", features = ["parsing", "macros", "serde"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["v4"] }
